<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhoOwesWho</string>

    <string name="add_new_billing">Click here to add a new billing</string>
    <string name="action_settings">Settings</string>

    <string name="enter_title_string">Enter Title</string>
    <string name="name_string">Enter Name</string>

    <string name="edit_string">Edit</string>
    <string name="summarize_billing_string">Summarize Billing</string>
    <string name="dkk_string">DKK</string>
    <string name="total_string">Total:</string>
    <string name="average_string">Average:</string>
    <string name="delete_string">Delete</string>
    <string name="add_new_person_to_billing_string">Add New Person To Billing</string>
    <string name="send_sms">Notify everyone by SMS</string>
    <string name="back_to_main">Return to overview</string>
    <string name="mobilepay">Open mobilepay</string>

    <!-- MainActivity popup -->
    <string name="popup_title">Set name of billing</string>
    <string name="popup_message">Insert the name of the billing in the text box below:</string>
    <string name="popup_textEdit_hint">Billing name</string>
    <string name="popup_confirm">Confirm</string>
    <string name="popup_default_name">Default Billing</string>
    <string name="popup_cancel">Cancel</string>

    <!-- AddPersonActivity -->
    <string name="add_person_toast_message">Please fill in all fields!</string>

    <!-- AddBilling Activity -->
    <string name="no_persons_toast">You have to add at least 2 people to the billing</string>

    <!-- Billing item xml -->
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>

    <!-- Yet to be added -->
    <string name="yet_to_be_added">This functionallity has yet to be added to the application</string>


</resources>
